--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                       <tr>
                         <th>S/N</th>
                         <th>image</th>
-                        <th>Firstname</th>
+                        <th>nickname</th>
                         <th>Lastname</th>
                         <th>E-mail</th>
                         <th>phone</th>
@@ -103,6 +103,10 @@
 
 
         </section>
+
+        <p> this is the best git bash tutorial that i have come accross since 2002 is that how is suppose to be 
+          right okay let see
+        </p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
